lints.workspace = true

[package]
name = "gix-revwalk"
version = "0.31.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate providing utilities for walking the revision graph"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["/src/**/*", "/LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-commitgraph/sha1", "gix-hash/sha1", "gix-hashtable/sha1", "gix-object/sha1"]

[dependencies]
gix-hash = { version = "^0.25.0", path = "../gix-hash" }
gix-error = { version = "^0.2.3", path = "../gix-error" }
gix-object = { version = "^0.60.0", path = "../gix-object" }
gix-date = { version = "^0.15.3", path = "../gix-date" }
gix-hashtable = { version = "^0.15.0", path = "../gix-hashtable" }
gix-commitgraph = { version = "^0.37.0", path = "../gix-commitgraph" }

thiserror = "2.0.18"
smallvec = "1.15.1"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-hash = { path = "../gix-hash", features = ["sha1", "sha256"] }

[package.metadata.docs.rs]
features = ["sha1"]
