lints.workspace = true

[package]
name = "gix-status"
version = "0.30.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with 'git status'-like functionality"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>", "Pascal Kuthe <pascal.kuthe@semimod.de>"]
edition = "2021"
include = ["/src/**/*", "/LICENSE-*"]
rust-version = "1.82"
autotests = false

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]
## Add support for tracking rewrites along with checking for worktree modifications.
worktree-rewrites = ["dep:gix-dir", "dep:gix-diff"]

[dependencies]
gix-index = { version = "^0.51.0", path = "../gix-index" }
gix-fs = { version = "^0.21.0", path = "../gix-fs" }
gix-hash = { version = "^0.25.0", path = "../gix-hash" }
gix-object = { version = "^0.60.0", path = "../gix-object" }
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-features = { version = "^0.48.0", path = "../gix-features", features = ["progress"] }
gix-filter = { version = "^0.30.0", path = "../gix-filter" }
gix-worktree = { version = "^0.52.0", path = "../gix-worktree", default-features = false, features = ["attributes"] }
gix-pathspec = { version = "^0.18.0", path = "../gix-pathspec" }

gix-dir = { version = "^0.25.0", path = "../gix-dir", optional = true }
gix-diff = { version = "^0.63.0", path = "../gix-diff", default-features = false, features = ["blob"], optional = true }

thiserror = "2.0.18"
filetime = "0.2.27"
bstr = { version = "1.12.0", default-features = false }

document-features = { version = "0.2.0", optional = true }

[target.'cfg(not(target_has_atomic = "64"))'.dependencies]
portable-atomic = "1"

[dev-dependencies]
gix-hash = { path = "../gix-hash", features = ["sha1"] }

[package.metadata.docs.rs]
features = ["sha1", "document-features", "worktree-rewrites"]
