lints.workspace = true

[package]
name = "gix-submodule"
version = "0.30.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing git submodules"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-config/sha1", "gix-refspec/sha1"]

[dependencies]
gix-pathspec = { version = "^0.18.0", path = "../gix-pathspec" }
gix-refspec = { version = "^0.41.0", path = "../gix-refspec" }
gix-config = { version = "^0.56.0", path = "../gix-config" }
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-url = { version = "^0.36.0", path = "../gix-url" }

bstr = { version = "1.12.0", default-features = false }
thiserror = "2.0.18"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-features = { path = "../gix-features", features = ["walkdir"] }

[package.metadata.docs.rs]
features = ["sha1"]
